[#973] Revive deployment tests
