# legion/operator/docs/swagger.json
@@ -1954,6 +1954,11 @@
                     "description": "Packaging integration ID",
                     "type": "string"
                 },
+                "resources": {
+                    "description": "Resources for packager container\nThe same format like k8s uses for pod resources.",
+                    "type": "object",
+                    "$ref": "#/definitions/ResourceRequirements"
+                },
                 "targets": {
                     "description": "List of targets. This parameter depends on the specific packaging integration",
                     "type": "array",
